k8s/istio/authorization/allow-expense-service.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-expense-service
  namespace: svp
spec:
  selector:
    matchLabels:
      app: expense-service
  action: ALLOW
  rules:
    - from:
        - source:
            principals:
              - cluster.local/ns/svp/sa/default
              - cluster.local/ns/istio-system/sa/istio-ingressgateway-service-account
