k8s/istio/authorization/allow-planning-service.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-planning-service
  namespace: svp
spec:
  selector:
    matchLabels:
      app: planning-service
  action: ALLOW
  rules:
    - from:
        - source:
            principals:
              - cluster.local/ns/svp/sa/default
              - cluster.local/ns/istio-system/sa/istio-ingressgateway-service-account
